<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_teams"
            android:icon="@drawable/ic_team"
            android:title="@string/teams"/>

        <item android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule"/>

        <item android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/tasks"/>

        <item android:id="@+id/nav_discussing"
            android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
            android:title="@string/discussing"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit"/>
    </group>
</menu>