<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:background="@color/orange"
        android:textAlignment="center"
        android:text="@string/join"
        style="@style/main_text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/code_team"
            style="@style/main_text"
            />
        <EditText
            style="@style/main_edit_text_style"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_code_join"
            android:autofillHints="password"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/close"
            android:textColor="@color/dark_grey"
            android:id="@+id/button_close_join"
            />
        <Button
            style="@style/edit_button"
            android:layout_marginStart="30dp"
            android:text="@string/confirm"
            android:textColor="@color/dark_grey"
            android:id="@+id/button_join_team"
            />
    </LinearLayout>

</LinearLayout>