<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/Image"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:id="@+id/button_back_one_team"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_text"
            android:layout_marginTop="20dp"
            android:text="@string/team_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:autofillHints="name"
            android:inputType="text"
            android:hint="@string/team_name"
            android:id="@+id/edit_name_change"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_text"
            android:text="@string/team_description"
            android:layout_marginTop="100dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="130dp"
            android:autofillHints="name"
            android:inputType="text"
            android:id="@+id/edit_desc_change"
            />

        <Button
            style="@style/edit_button"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:id="@+id/change_info_button"
            />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>