<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="470dp"
        android:id="@+id/enter_form"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_marginStart="60dp"
        android:background="@color/form"
        android:paddingTop="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/main_text"
            />

        <EditText
            style="@style/primary_edit_text"
            android:id="@+id/edit_email_enter"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/main_text"
            android:layout_marginTop="30dp"
            />

        <EditText
            style="@style/primary_edit_text"
            android:id="@+id/edit_pass_enter"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary"
            android:text="@string/enter"
            android:id="@+id/enter_button"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary"
            android:text="@string/registration"
            android:id="@+id/registration_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="470dp"
        android:id="@+id/registration_form"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_marginStart="60dp"
        android:background="@color/form"
        android:paddingTop="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/main_text"
            />

        <EditText
            style="@style/primary_edit_text"
            android:id="@+id/edit_name_reg"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            style="@style/main_text"
            />

        <EditText
            style="@style/primary_edit_text"
            android:id="@+id/edit_email_reg"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/main_text"
            android:layout_marginTop="20dp"
            />

        <EditText
            style="@style/primary_edit_text"
            android:id="@+id/edit_pass_reg"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary"
            android:text="@string/registrate"
            android:id="@+id/signUp_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>