<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/Image"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:id="@+id/button_back_tasks" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/task"
                    style="@style/middle_text"
                    />
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/Image"
                    android:background="@drawable/ic_baseline_more_vert_24"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/popup_one_task" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="508dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/task_name_activity"
            style="@style/main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
        <TextView
            style="@style/middle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/when_execute" />
        <TextView
            android:id="@+id/task_date_activity"
            style="@style/middle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="10dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Image"
                android:src="@drawable/ic_baseline_groups_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_task_activity"
                android:layout_margin="10dp"
                style="@style/middle_text" />
        </LinearLayout>

        <Button
            android:id="@+id/button_move_task"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/light_grey"
            android:text="@string/move_to_another_date" />
        <Button
            android:id="@+id/button_task_done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/orange"
            android:text="@string/done" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>