<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/Image"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:id="@+id/button_back_chats" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:id="@+id/title_chat_name"
                    style="@style/middle_text"
                    />
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/Image"
                    android:background="@drawable/ic_baseline_more_vert_24"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/popup_one_chat" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_send_24"
            android:contentDescription="@string/discussing"
            android:id="@+id/button_send" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_message"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/button_send">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_new_message"
                android:hint="@string/message"
                android:autofillHints="name"
                android:inputType="text"
                android:background="@color/light_yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_of_messages"
            android:layout_above="@id/edit_message"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>